{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 15,
  "lineage": "26c973ef-69e9-64b2-b4cc-108983296112",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "eks-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033a6a056910d1137",
            "arn": "arn:aws:ec2:ap-northeast-2:525017980305:instance/i-012ed11c67f075995",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012ed11c67f075995",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "InnfisKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e6737d27d86b0b92",
            "private_dns": "ip-10-0-4-242.ap-northeast-2.compute.internal",
            "private_ip": "10.0.4.242",
            "public_dns": "ec2-3-34-49-2.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.49.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09e648bc4bda22fc9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d73be290092121b3",
            "tags": {
              "Name": "eks-bastion"
            },
            "tags_all": {
              "Name": "eks-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005733327802bae9d"
            ]
          },
          "dependencies": [
            "module.bastion.aws_security_group.eks-bastion",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525017980305:security-group/sg-005733327802bae9d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-005733327802bae9d",
            "ingress": [],
            "name": "eks-bastion",
            "name_prefix": "",
            "owner_id": "525017980305",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-bastion"
            },
            "tags_all": {
              "Name": "eks-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-01414904653cdbe6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-bastion-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3461137116",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-005733327802bae9d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.eks-bastion",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-bastion-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "58.143.157.64/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3793073581",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-005733327802bae9d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.eks-bastion",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress-control",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1489713680",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ec804bed732ca6f5",
            "self": false,
            "source_security_group_id": "sg-005733327802bae9d",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.eks-bastion",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525017980305:internet-gateway/igw-02d8512a67deab767",
            "id": "igw-02d8512a67deab767",
            "owner_id": "525017980305",
            "tags": {
              "ClusterTag": "eks-innfi",
              "Name": "eks-innfi"
            },
            "tags_all": {
              "ClusterTag": "eks-innfi",
              "Name": "eks-innfi"
            },
            "vpc_id": "vpc-01414904653cdbe6d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02d8512a67deab767",
            "id": "r-rtb-00398c73701938bf21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00398c73701938bf2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525017980305:route-table/rtb-00398c73701938bf2",
            "id": "rtb-00398c73701938bf2",
            "owner_id": "525017980305",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02d8512a67deab767",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ClusterTag": "eks-innfi",
              "Name": "eks-innfi-public"
            },
            "tags_all": {
              "ClusterTag": "eks-innfi",
              "Name": "eks-innfi-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01414904653cdbe6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0025ad5b9edb0742a",
            "route_table_id": "rtb-00398c73701938bf2",
            "subnet_id": "subnet-0d73be290092121b3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af0214a3e928681f",
            "route_table_id": "rtb-00398c73701938bf2",
            "subnet_id": "subnet-0b199de9d8b057004"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525017980305:subnet/subnet-0d73be290092121b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d73be290092121b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "525017980305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ClusterTag": "eks-innfi",
              "Name": "eks-innfi-public-ap-northeast-2a",
              "kubernetes.io/cluster/eks-innfi": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ClusterTag": "eks-innfi",
              "Name": "eks-innfi-public-ap-northeast-2a",
              "kubernetes.io/cluster/eks-innfi": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01414904653cdbe6d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525017980305:subnet/subnet-0b199de9d8b057004",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b199de9d8b057004",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "525017980305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ClusterTag": "eks-innfi",
              "Name": "eks-innfi-public-ap-northeast-2b",
              "kubernetes.io/cluster/eks-innfi": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ClusterTag": "eks-innfi",
              "Name": "eks-innfi-public-ap-northeast-2b",
              "kubernetes.io/cluster/eks-innfi": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01414904653cdbe6d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525017980305:vpc/vpc-01414904653cdbe6d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e9671331ed8d818a",
            "default_route_table_id": "rtb-0e6bd0e81a3b044fc",
            "default_security_group_id": "sg-0ec804bed732ca6f5",
            "dhcp_options_id": "dopt-833febe8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01414904653cdbe6d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e6bd0e81a3b044fc",
            "owner_id": "525017980305",
            "tags": {
              "ClusterTag": "eks-innfi",
              "Name": "eks-innfi"
            },
            "tags_all": {
              "ClusterTag": "eks-innfi",
              "Name": "eks-innfi"
            }
          }
        }
      ]
    }
  ]
}